--- a/source/_posts/2015-06-01-tikal.markdown
+++ b/source/_posts/2015-06-01-tikal.markdown
@@ -13,8 +13,8 @@ another long minibus day, 11 hours on the bus, but at least this time I got a
 single seat near the door without one in front of it, so I had plenty of legroom
 and nobody taking up the space where my shoulders go. I stayed the night in a
 hotel where I was the only guest. I really don't think the travel agent made
-much effort to get me in somewhere cheap as I had to walk past hostels to get
-there. I made good use of the air conditioning at least!
+much effort to get me in somewhere cheap as I had to walk past a few different
+hostels to get there. I made good use of the air conditioning at least!
 
 <!-- more -->
 
@@ -23,30 +23,30 @@ itself. I had opted to stay a night at one of the hotels situated right at the
 entrance to the park to enable me to do the sunrise tour without having to get
 up at quite such a ridiculous hour to travel the hour or so from Flores to the
 park and still make it for sunrise. My room was one of the cheapest ones, so it
-was situated away from the more resort like part of the hotel, down a long path
-out into the jungle. I think I'd actually prefer this over the ones in the
+was situated away from the fancy part of the hotel near the pool, down a long
+path out into the jungle. I think I'd actually prefer this over the ones in the
 upmarket part of the hotel as it was a bit more private feeling and got the
 sounds of nature after dark.
 
 <a href="https://www.flickr.com/photos/lucasthenomad/17041100829/in/set-72157652039835056" title="The back of Templo del gran jaguar by Lucas the nomad, on Flickr"><img src="https://farm8.staticflickr.com/7676/17041100829_3235030a1c_c.jpg" width="800" height="601" alt="The back of Templo del gran jaguar"></a>
 
 After checking in I went and did some solo exploring of Tikal. It seemed like a
-long walk before I saw any sign of ruins, then suddenly I was next to a 50M tall
-pyramid!
+long walk before I saw any sign of ruins, then suddenly I was next to an
+enormous pyramid!
 
 <a href="https://www.flickr.com/photos/lucasthenomad/17041182279/in/set-72157652039835056" title="Hard to even identify that this is an unrestored temple by Lucas the nomad, on Flickr"><img src="https://farm9.staticflickr.com/8692/17041182279_9d42cf472e_c.jpg" width="800" height="601" alt="Hard to even identify that this is an unrestored temple"></a>
 
 It was amazing to see the scale of the site and the structures on it. Even more
 so when you realise pretty much every hill you see is actually an unrestored
-building of some sort or another.
+structure of some sort or another.
 
-<a href="https://www.flickr.com/photos/lucasthenomad/17226783401/in/set-72157652039835056" title="Maler's Palace? by Lucas the nomad, on Flickr"><img src="https://farm8.staticflickr.com/7657/17226783401_45ba662612_c.jpg" width="800" height="601" alt="Maler's Palace?"></a>
+<a href="https://www.flickr.com/photos/lucasthenomad/17226783401/in/set-72157652039835056" title="Maler's Palace? by Lucas the nomad, on Flickr"><img src="https://farm8.staticflickr.com/7657/17226783401_45ba662612_c.jpg" width="800" height="601" alt="Maler's Palace"></a>
 
-The structures themselves weren't all that imagination provoking for me.
-They're huge, but they just feel like giant piles of Lego. I have trouble
+The structures themselves weren't particularly imagination provoking for me.
+They're huge, but they just feel like giant piles of bricks. I have trouble
 imagining how people would live in them, or guessing what they would use them
 for, which makes it hard for me to wonder much about their lives. Maybe I've
-just got ruin fatigue, although I've only ever seen two Mayan ruins so far.
+just got ruin fatigue, although I've only seen two Mayan ruins so far.
 
 <a href="https://www.flickr.com/photos/lucasthenomad/16605028094/in/set-72157652039835056" title="The unrestored side of Temple V by Lucas the nomad, on Flickr"><img src="https://farm9.staticflickr.com/8790/16605028094_db666e7617_c.jpg" width="601" height="800" alt="The unrestored side of Temple V"></a>
 
@@ -54,7 +54,7 @@ It was interesting to see on Temple V how different the sides that aren't
 restored look compared to the one that is. The ones that aren't restored just
 look like very steep hills covered in trees, while the one that is has a giant
 staircase surrounded by terraces. The original archaeologists would have needed
-much better imaginations than mine to realise what was actually here.
+much better imaginations than mine to realise what was actually there.
 
 <a href="https://www.flickr.com/photos/lucasthenomad/17041195609/in/set-72157652039835056" title="Me at Tikal by Lucas the nomad, on Flickr"><img src="https://farm9.staticflickr.com/8728/17041195609_b65d96c765_c.jpg" width="800" height="601" alt="Me at the top of Temple IV"></a>
 
@@ -73,7 +73,7 @@ with stela and alters.
 
 Since I was in the park overnight anyway, I also decided to go on the hotel's
 sunset tour which turned out to be a bit of a disappointment. The tour was
-supposed to be in English, but the guides English was extremely poor. I noticed
+supposed to be in English, but the guide's English was extremely poor. I noticed
 at one point that on his official guide badge it only listed Spanish as the
 language he was permitted to provide his services in. This led to it not being
 very informative at all, and I got little more from having a guide than I had
@@ -158,7 +158,7 @@ were only little fellas, but I still wouldn't want one of them biting me.
 In the afternoon I got a shuttle back to Flores where I was spending the night,
 but this time I arrived with enough time to actually explore a bit. I tried to
 walk around the street that circles the island, but one side was cut off by the
-lake where it's broken the bank. It seems like there's a lot of lakes with
+lake where it's broken its bank. It seems like there's a lot of lakes with
 rising water levels in Guatemala.
 
 <a href="https://www.flickr.com/photos/lucasthenomad/16605391994/in/set-72157652039835056" title="Big doggie getting a bath by Lucas the nomad, on Flickr"><img src="https://farm8.staticflickr.com/7652/16605391994_fcf8c3b3dc_c.jpg" width="600" height="800" alt="Big doggie getting a bath"></a>
@@ -166,4 +166,5 @@ rising water levels in Guatemala.
 Flores didn't really seem like a very interesting place. Everything there was a
 hotel, a restaurant or a souvenir shop, with more souvenir shops per square km
 than Antigua by a long shot. I was pretty glad I only had the afternoon there,
-with a bus booked to take me down to Rio Dulce the next morning.
+it seemed like plenty, and I had a bus booked to take me down to Rio Dulce the
+next morning.
